# 10_623_final_project

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements-dev.txt
mdopt/: __init__.py  align.py  main.py  requirements.txt
mdopt/trajectories_500/: optimization_stats.txt
mdopt/trajectories_ALL_e5/: optimization_stats.txt
model/: MAT.py  __init__.py  diffusion.py  featurization.py  utils.py
training/: dataset.py  eval.py  featurize_quantum.ipynb  train.py  training_nick_v.py
training/configs/: config.yml  config_nick.yml
